# cursus-python

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  cluster-consumer.md  configuration-reference.md  consumer-guide.md  fastapi-integration.md  getting-started.md  producer-guide.md  protocol.md
examples/fastapi/: README.md  app.py
examples/standalone/: README.md  batch_producer.py  consumer_group.py  event_sourcing.py  keyed_producer.py  simple_consumer.py  simple_producer.py
src/cursus/: __init__.py  async_consumer.py  async_eventstore.py  async_producer.py  broker_client.py  config.py  consumer.py  errors.py  eventstore.py  offsets.py  producer.py  transaction.py  types.py
src/cursus/compression/: base.py  gzip_comp.py  registry.py
src/cursus/connection/: async_conn.py  framing.py  sync_conn.py
src/cursus/protocol/: command.py  decoder.py  encoder.py
tests/integration/: conftest.py  test_consumer.py  test_eventstore.py  test_producer.py  test_transactions.py
tests/unit/: test_async_eventstore.py  test_config.py  test_consumer_offsets.py  test_errors.py  test_eventstore.py  test_producer_partitioning.py  test_transactions.py  test_types.py
tests/unit/compression/: test_gzip.py  test_registry.py
tests/unit/connection/: test_framing.py
tests/unit/protocol/: test_command.py  test_decoder.py  test_encoder.py
